[fix] home--cfs gap

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -275,7 +275,7 @@
         height: 200px;
         position: absolute;
         bottom: -50px;
-        z-index: -1;
+        // z-index: -1;
     }
     &--left{
         z-index: 2;
@@ -369,6 +369,15 @@
     padding-top: 80px;
     padding-bottom: 5%;
     z-index: 3;
+    &:before {
+        content:'';
+        position: absolute;
+        top: -200px;
+        width: 100%;
+        height: 200px;
+        background: url('../img/bg-linear.svg') no-repeat;
+        background-size: cover;
+    }
     &--item {
         text-align: center;
 
